--- a/TMTracker/Base.lproj/Main.storyboard
+++ b/TMTracker/Base.lproj/Main.storyboard
@@ -441,17 +441,23 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CW1-7A-AII">
-                                <rect key="frame" x="27" y="87" width="108" height="255"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CW1-7A-AII">
+                                <rect key="frame" x="82" y="106" width="356" height="351"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="00:00" textAlignment="natural" lineBreakMode="clip" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1am-Qv-sj9">
-                                <rect key="frame" x="76" y="165" width="84" height="30"/>
+                                <rect key="frame" x="229" y="375" width="84" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="dHA-UB-tcY" firstAttribute="top" secondItem="CW1-7A-AII" secondAttribute="bottom" id="6kA-6v-wdB"/>
+                            <constraint firstItem="CW1-7A-AII" firstAttribute="top" secondItem="qPP-Te-0rL" secondAttribute="bottom" id="JU4-gg-Qq7"/>
+                            <constraint firstItem="CW1-7A-AII" firstAttribute="leading" secondItem="q92-43-SAk" secondAttribute="leading" id="Zye-ON-dZ8"/>
+                            <constraint firstAttribute="trailing" secondItem="CW1-7A-AII" secondAttribute="trailing" id="bvs-Qj-bmE"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="timerLabel" destination="1am-Qv-sj9" id="pdC-K3-BX1"/>
