--- a/TMTracker/Base.lproj/Main.storyboard
+++ b/TMTracker/Base.lproj/Main.storyboard
@@ -224,6 +224,50 @@
             </objects>
             <point key="canvasLocation" x="1642" y="335"/>
         </scene>
+        <!--Words View Controller-->
+        <scene sceneID="cUh-Wu-GYh">
+            <objects>
+                <pageViewController storyboardIdentifier="wordsPageViewController" autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="pEC-GW-cLb" customClass="WordsViewController" customModule="TMTracker" customModuleProvider="target" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hU5-5p-TA4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1631" y="1127"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="Ccv-wr-edh">
+            <objects>
+                <viewController storyboardIdentifier="firstWordViewController" id="Mvv-Rb-yEu" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="MIf-Zv-uXh"/>
+                        <viewControllerLayoutGuide type="bottom" id="6jx-5o-a9I"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Ps4-ft-2vt">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="1" green="0.59714516042370991" blue="0.74386783155381764" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0OD-Hi-fFS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2324" y="1127"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="dem-fg-ebn">
+            <objects>
+                <viewController storyboardIdentifier="secondWordViewController" id="55c-CU-olf" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="UwW-we-nPk"/>
+                        <viewControllerLayoutGuide type="bottom" id="THg-g2-J79"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="wSd-Zw-0sy">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="1" green="0.73277180580000001" blue="0.15509822030000001" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tMY-QQ-fWG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2318" y="1801"/>
+        </scene>
         <!--Results-->
         <scene sceneID="pWK-Dp-Wds">
             <objects>
@@ -403,6 +447,9 @@
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
                                 <color key="backgroundColor" red="0.39549386074145132" green="1" blue="0.56514381598898189" alpha="1" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <segue destination="pEC-GW-cLb" kind="show" id="IpN-2J-mhG"/>
+                                </connections>
                             </collectionViewCell>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="LogResult" id="lqS-An-zIi">
                                 <rect key="frame" x="122" y="64" width="50" height="50"/>
@@ -441,9 +488,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CW1-7A-AII">
-                                <rect key="frame" x="82" y="106" width="356" height="351"/>
-                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="00:00" textAlignment="natural" lineBreakMode="clip" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1am-Qv-sj9">
                                 <rect key="frame" x="229" y="375" width="84" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -451,17 +495,10 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="dHA-UB-tcY" firstAttribute="top" secondItem="CW1-7A-AII" secondAttribute="bottom" id="6kA-6v-wdB"/>
-                            <constraint firstItem="CW1-7A-AII" firstAttribute="top" secondItem="qPP-Te-0rL" secondAttribute="bottom" id="JU4-gg-Qq7"/>
-                            <constraint firstItem="CW1-7A-AII" firstAttribute="leading" secondItem="q92-43-SAk" secondAttribute="leading" id="Zye-ON-dZ8"/>
-                            <constraint firstAttribute="trailing" secondItem="CW1-7A-AII" secondAttribute="trailing" id="bvs-Qj-bmE"/>
-                        </constraints>
+                        <color key="backgroundColor" red="0.0616352695116964" green="1" blue="0.10585134316742595" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
                     <connections>
                         <outlet property="timerLabel" destination="1am-Qv-sj9" id="pdC-K3-BX1"/>
-                        <outlet property="trafficLight" destination="CW1-7A-AII" id="VHN-Up-aWn"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="emN-tq-sMP" userLabel="First Responder" sceneMemberID="firstResponder"/>
