word of day initial delegate and datasource

--- a/TMTracker/Base.lproj/Main.storyboard
+++ b/TMTracker/Base.lproj/Main.storyboard
@@ -232,10 +232,10 @@
             </objects>
             <point key="canvasLocation" x="1631" y="1127"/>
         </scene>
-        <!--View Controller-->
+        <!--First Word View Controller-->
         <scene sceneID="Ccv-wr-edh">
             <objects>
-                <viewController storyboardIdentifier="firstWordViewController" id="Mvv-Rb-yEu" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="firstWordViewController" id="Mvv-Rb-yEu" customClass="FirstWordViewController" customModule="TMTracker" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="MIf-Zv-uXh"/>
                         <viewControllerLayoutGuide type="bottom" id="6jx-5o-a9I"/>
@@ -243,17 +243,42 @@
                     <view key="view" contentMode="scaleToFill" id="Ps4-ft-2vt">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Word" textAlignment="natural" lineBreakMode="clip" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M07-FT-0pQ">
+                                <rect key="frame" x="83" y="113" width="138" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Definition" textAlignment="natural" lineBreakMode="clip" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cOe-WY-AHN">
+                                <rect key="frame" x="82" y="249" width="163" height="23"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Sample Sentence" textAlignment="natural" lineBreakMode="clip" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mjw-Eu-HNl">
+                                <rect key="frame" x="67" y="385" width="212" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="0.59714516042370991" blue="0.74386783155381764" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
+                    <connections>
+                        <outlet property="definition" destination="cOe-WY-AHN" id="H60-iy-vsn"/>
+                        <outlet property="sampleSentence" destination="mjw-Eu-HNl" id="OPd-gA-ReH"/>
+                        <outlet property="word" destination="M07-FT-0pQ" id="9dW-QA-ocR"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0OD-Hi-fFS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2324" y="1127"/>
         </scene>
-        <!--View Controller-->
+        <!--Second Word View Controller-->
         <scene sceneID="dem-fg-ebn">
             <objects>
-                <viewController storyboardIdentifier="secondWordViewController" id="55c-CU-olf" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="secondWordViewController" id="55c-CU-olf" customClass="SecondWordViewController" customModule="TMTracker" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="UwW-we-nPk"/>
                         <viewControllerLayoutGuide type="bottom" id="THg-g2-J79"/>
@@ -261,8 +286,33 @@
                     <view key="view" contentMode="scaleToFill" id="wSd-Zw-0sy">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Second word" textAlignment="natural" lineBreakMode="clip" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5q1-ty-vvZ">
+                                <rect key="frame" x="46" y="138" width="189" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Second Sample" textAlignment="natural" lineBreakMode="clip" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UzE-jc-Egx">
+                                <rect key="frame" x="36" y="364" width="207" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Second Sentence" textAlignment="natural" lineBreakMode="clip" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ctg-ij-zre">
+                                <rect key="frame" x="36" y="234" width="222" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="0.73277180580000001" blue="0.15509822030000001" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
+                    <connections>
+                        <outlet property="definition" destination="ctg-ij-zre" id="N8H-RJ-S6m"/>
+                        <outlet property="sampleSentence" destination="UzE-jc-Egx" id="na4-yl-nnw"/>
+                        <outlet property="word" destination="5q1-ty-vvZ" id="uez-uV-7rp"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tMY-QQ-fWG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
